--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body > div {
   height: 52ch;
 }
 .slider {
+  cursor: pointer;
+  position: relative;
   -webkit-appearance: none;
   height: 1ch;
   border-radius: 0.5ch;
@@ -27,6 +29,20 @@ body > div {
   opacity: 0.7;
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
+}
+.slider::before {
+  position: absolute;
+  display: block;
+  left: calc(50% - 0.125ch);
+  top: -1ch;
+  width: 0.25ch;
+  border-radius: 0.125ch;
+  height: 3ch;
+  content: '';
+  background-color: red;
+  font-weight: bold;
+  font-size: large;
+  pointer-events: none;
 }
 
 .slider::-webkit-slider-thumb {
