Added hands to set alarm (no alarm yet)

--- a/hands.css
+++ b/hands.css
@@ -12,7 +12,7 @@
   translate: 25.6ch 25.6ch;
   height: 0.8ch;
   transform-origin: 0.4ch 0.4ch;
-  transform: rotate(25deg);
+  transform: rotate(-90deg);
   border-radius: 0.4ch;
 }
 #hours {
@@ -21,6 +21,32 @@
   height: 1.2ch;
   translate: 25.4ch 25.4ch;
   transform-origin: 0.6ch 0.6ch;
-  transform: rotate(25deg);
+  transform: rotate(-90deg);
   border-radius: 0.6ch;
+}
+
+#target-min {
+  pointer-events: all;
+  z-index: -1;
+  background-color: darkred;
+  width: 24.6ch;
+  height: 0.8ch;
+  top: calc(50% + 0.6ch);
+  left: calc(50% + 0.6ch);
+  transform-origin: 0.4ch 0.4ch;
+  transform: rotate(calc(var(--offset) + var(--rot)));
+  border-radius: 0.4ch;
+  cursor: grab;
+}
+#target-h {
+  pointer-events: all;
+  background-color: darkred;
+  width: 19.8ch;
+  height: 1.2ch;
+  top: calc(50% + 0.4ch);
+  left: calc(50% + 0.4ch);
+  transform-origin: 0.6ch 0.6ch;
+  transform: rotate(calc(var(--offset) + var(--rot)));
+  border-radius: 0.6ch;
+  cursor: grab;
 }
