Added cursors (Moved position of fullscreen button)

--- a/hands.css
+++ b/hands.css
@@ -36,7 +36,7 @@
   transform-origin: 0.4ch 0.4ch;
   transform: rotate(calc(var(--offset) + var(--rot)));
   border-radius: 0.4ch;
-  cursor: grab;
+  cursor: url('assets/cursor/rotate.svg') 16 16, grab;
 }
 #target-h {
   pointer-events: all;
@@ -48,5 +48,5 @@
   transform-origin: 0.6ch 0.6ch;
   transform: rotate(calc(var(--offset) + var(--rot)));
   border-radius: 0.6ch;
-  cursor: grab;
+  cursor: url('assets/cursor/rotate.svg') 16 16, grab;
 }
