--- a/style.css
+++ b/style.css
@@ -2,14 +2,15 @@
   font-family: 'sevensegment';
   src: url('Seven Segment.ttf') format('truetype');
 }
-html,
 body {
-  z-index: -1;
+  padding: 1ch;
   font-family: 'sevensegment';
+}
+html {
   background-color: black;
   cursor: url('assets/cursor/default.svg'), default;
 }
-body > div {
+body > #clock {
   --rot: 0deg;
   position: absolute;
   pointer-events: none;
@@ -21,73 +22,4 @@ body > div {
   margin: auto;
   width: 52ch;
   height: 52ch;
-}
-label {
-  user-select: none;
-  cursor: url('assets/cursor/default.svg'), default;
-}
-label,
-input,
-img {
-  visibility: hidden;
-}
-body:active label,
-body:active input,
-body:hover label,
-body:hover input,
-body:active img,
-body:hover img {
-  visibility: visible;
-}
-.slider {
-  cursor: pointer;
-  position: relative;
-  -webkit-appearance: none;
-  height: 1ch;
-  border-radius: 0.5ch;
-  background: red;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
-  cursor: url('assets/cursor/click.svg') 8 8, pointer;
-}
-.slider::before {
-  position: absolute;
-  display: block;
-  left: calc(50% - 0.125ch);
-  top: -1ch;
-  width: 0.25ch;
-  border-radius: 0.125ch;
-  height: 3ch;
-  content: '';
-  background-color: red;
-  font-weight: bold;
-  font-size: large;
-  pointer-events: none;
-}
-
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 2ch;
-  height: 2ch;
-  border-radius: 50%;
-  background: red;
-  cursor: url('assets/cursor/move-horizontal.svg') 16 16, ew-resize;
-}
-
-.slider::-moz-range-thumb {
-  width: 2ch;
-  height: 2ch;
-  border-radius: 50%;
-  background: red;
-}
-img {
-  position: absolute;
-  height: 3ch;
-  width: 3ch;
-  top: 1ch;
-  right: 20px;
-  cursor: url('assets/cursor/click.svg') 8 8, pointer;
 }
