Added structure to code Fixed alarm not activating sometimes

--- a/style.css
+++ b/style.css
@@ -24,3 +24,9 @@ body > #clock {
   width: 52ch;
   height: 52ch;
 }
+body > span {
+  visibility: hidden;
+  top: unset;
+  bottom: 1ch;
+  left: 1ch;
+}
