--- a/options.css
+++ b/options.css
@@ -1,7 +1,7 @@
 #options {
   pointer-events: all;
   display: grid;
-  grid-template-columns: max-content max-content;
+  grid-template-columns: max-content max-content max-content;
   width: max-content;
 }
 
@@ -9,6 +9,7 @@ img {
   height: 3ch;
   width: 3ch;
   cursor: url('assets/cursor/click.svg') 8 8, pointer;
+  grid-column: 1 / span 1;
 }
 
 /*Slider*/
@@ -22,6 +23,7 @@ img {
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
   cursor: url('assets/cursor/click.svg') 8 8, pointer;
+  grid-column: 3 / span 1;
 }
 .slider::before {
   position: absolute;
@@ -65,9 +67,11 @@ input[type='checkbox'] {
   width: 2ch;
   margin: 0 auto;
   cursor: url('assets/cursor/click.svg') 8 8, pointer;
+  grid-column: 1 / span 1;
 }
 
 input:checked:before {
+  visibility: visible;
   left: 0.25ch;
   top: -0.25ch;
   color: darkred;
@@ -77,16 +81,37 @@ input:checked:before {
   position: absolute;
 }
 
+#eye:checked:before {
+  left: 0;
+  color: red;
+  content: '👁';
+}
+
+#eye:not(:checked):before {
+  visibility: visible;
+  left: 0.125ch;
+  top: -0.25ch;
+  color: darkred;
+  content: '◡';
+  font-weight: bold;
+  display: block;
+  position: absolute;
+}
+#eye {
+  background: none;
+}
+
 /*Hover*/
 
 label {
+  color: red;
   user-select: none;
   cursor: url('assets/cursor/default.svg'), default;
+  grid-column: 2 / span 1;
 }
 #options > * {
   visibility: hidden;
 }
-#options:active > *,
-#options:hover > * {
+#options:has(#eye:checked) > * {
   visibility: visible;
 }
