--- a/styles/options/checkboxes.css
+++ b/styles/options/checkboxes.css
@@ -3,5 +3,5 @@
   position: relative;
   outline: 2px solid red;
   border-radius: 0.5ch;
-  cursor: url('../../assets/cursor/click.svg') 8 8, pointer;
+  cursor: url('../../assets/icons/cursor/click.svg') 8 8, pointer;
 }
