--- a/styles/options/slider.css
+++ b/styles/options/slider.css
@@ -1,34 +1,22 @@
 .slider {
-  position: relative;
-  -webkit-appearance: none;
   height: 1ch;
   border-radius: 0.5ch;
   background: red;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
-  cursor: url('../../assets/icons/cursor/click.svg') 8 8, pointer;
-  grid-column: 3 / span 1;
 }
 .slider:focus {
   outline: 2px solid darkred;
 }
 .slider::before {
-  position: absolute;
-  display: block;
   left: calc(50% - 0.125ch);
   top: -1ch;
   width: 0.25ch;
   border-radius: 0.125ch;
   height: 3ch;
-  content: '';
-  background-color: red;
-  font-weight: bold;
-  font-size: large;
+  background: red;
 }
 
 .slider::-webkit-slider-thumb {
   position: relative;
-  -webkit-appearance: none;
   appearance: none;
   width: 2ch;
   height: 2ch;
@@ -36,10 +24,12 @@
   background: red;
   cursor: url('../../assets/icons/cursor/move-horizontal.svg') 16 16, ew-resize;
 }
-
 .slider::-moz-range-thumb {
+  position: relative;
+  appearance: none;
   width: 2ch;
   height: 2ch;
   border-radius: 50%;
   background: red;
+  cursor: url('../../assets/icons/cursor/move-horizontal.svg') 16 16, ew-resize;
 }
