--- a/styles/options/slider.css
+++ b/styles/options/slider.css
@@ -1,12 +1,12 @@
-.slider {
+input[type='range'] {
   height: 1ch;
   border-radius: 0.5ch;
   background: red;
 }
-.slider:focus {
+input[type='range']:focus {
   outline: 2px solid darkred;
 }
-.slider::before {
+input[type='range']:before {
   left: calc(50% - 0.125ch);
   top: -1ch;
   width: 0.25ch;
@@ -15,7 +15,7 @@
   background: red;
 }
 
-.slider::-webkit-slider-thumb {
+input[type='range']::-webkit-slider-thumb {
   position: relative;
   appearance: none;
   width: 2ch;
@@ -24,7 +24,7 @@
   background: red;
   cursor: url('../../assets/icons/cursor/move-horizontal.svg') 16 16, ew-resize;
 }
-.slider::-moz-range-thumb {
+input[type='range']::-moz-range-thumb {
   position: relative;
   appearance: none;
   width: 2ch;
