Fixed wrong radio buttons were selected when adjusting with mouse or other hand

--- a/styles/digits.css
+++ b/styles/digits.css
@@ -44,39 +44,43 @@ fieldset {
   --circle-distance: 7ch;
 }
 
+fieldset > input:not(:checked) {
+  visibility: hidden;
+}
+
 fieldset > div:nth-child(2) {
   --rot: 0deg;
 }
-fieldset > div:nth-child(3) {
+fieldset > div:nth-child(4) {
   --rot: 30deg;
 }
-fieldset > div:nth-child(4) {
+fieldset > div:nth-child(6) {
   --rot: 60deg;
 }
-fieldset > div:nth-child(5) {
+fieldset > div:nth-child(8) {
   --rot: 90deg;
 }
-fieldset > div:nth-child(6) {
+fieldset > div:nth-child(10) {
   --rot: 120deg;
 }
-fieldset > div:nth-child(7) {
+fieldset > div:nth-child(12) {
   --rot: 150deg;
 }
-fieldset > div:nth-child(8) {
+fieldset > div:nth-child(14) {
   --rot: 180deg;
 }
-fieldset > div:nth-child(9) {
+fieldset > div:nth-child(16) {
   --rot: 210deg;
 }
-fieldset > div:nth-child(10) {
+fieldset > div:nth-child(18) {
   --rot: 240deg;
 }
-fieldset > div:nth-child(11) {
+fieldset > div:nth-child(20) {
   --rot: 270deg;
 }
-fieldset > div:nth-child(12) {
+fieldset > div:nth-child(22) {
   --rot: 300deg;
 }
-fieldset > div:nth-child(13) {
+fieldset > div:nth-child(24) {
   --rot: 330deg;
 }
